2002-02-24 05:00
 Transaction:
  - Full method coverage by self-test
  - Found recently introduced bug in implicit abort!
2002-02-24 04:00
 TableStream:
  - Documented method coverage
 TableReader:
  - Documented method coverage
 TableWriter:
  - Documented method coverage
 Test10:
  - Created
 Transaction:
  - Documented method coverage
  - Improved test coverage
 Transactor:
  - Documented method coverage
2002-02-24 01:30
 CONCEPT:
  - Removed unneeded old file
 Connection:
  - Full method coverage by self-test
 Cursor:
  - Documented method coverage
 Trigger:
  - Full method coverage by self-test
2002-02-15 01:30
 Docs:
  - More explanation on transaction bracketing
 Transaction:
  - Deferring commits to destruction time was wrong
2002-02-03 20:15
 Result:
  - Added metadata query methods
  - Removed unnecessary friendship with Tuple
2002-02-03 06:00
 Docs:
  - More examples
 Makefile:
  - No longer removes old library.  Same difference.
  - Abstracted away source tarball, source directory name
2002-02-02 18:45
 Docs:
  - More on exceptions, more on executing queries.
 Makefile:
  - Now builds an actual (but static) library
2002-01-26 21:15
 CVS:
  - Imported into CVS
 Makefile:
  - Fixed "std namespace compiler workaround" breako
  - Added "dist" target
2002-01-26 00:30
 All:
  - New #define PGSTD to replace std if needed
 Compiler:
  - New header pg_compiler.h
  - Genericized workaround for missing numeric_limits
  - Disable braindead Microsoft Visual C++ warnings
2002-01-20 14:50
 Result:
  - Fixed Result::Field::name() -- thanks to Gilberto Ribeiro de Queiroz
2002-01-08 21:50
 TableWriter:
  - operator= forgot to return *this
 Test9:
  - Created to test TableWriter's back_insert_iterator
2002-01-07 00:15
 TableWriter:
  - Implemented back_insert_iterator<TableWriter>
2002-01-01 23:45
 TableWriter:
  - Forgot to separate fields in output
 Tests:
  - Rearranged to set up their own database environment
  - New test writes orgevents table
 Transaction: