@@ -7,7 +7,7 @@
  *      implementation of the Pg::Cursor class.
  *   Pg::Cursor represents a database cursor.
  *
- * Copyright (c) 2001, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2002, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  *-------------------------------------------------------------------------
  */
